# LAT

./: .gitignore  AUTHORS  COPYING-DOCS  ChangeLog  Makefile.am  README  README.md  TODO  autogen.sh  configure.ac  lat.spec.in
debian/: Makefile.am  changelog  control  copyright  files  menu.ex  rules  watch  watch.ex
desktop/: Makefile.am  lat-plugins.pc.in  lat.applications  lat.desktop.in
gnome-keyring-glue/: AUTHORS  Attribute.cs  AttributeType.cs  Found.cs  Global.cs  GnomeKeyringSharp.OperationGetIntCallbackNative.cs  GnomeKeyringSharp.OperationGetListCallbackNative.cs  ItemType.cs  Makefile.am  NetworkPasswordData.cs  OperationGetIntCallback.cs  OperationGetListCallback.cs  Result.cs  gnome-keyring-glue.dll.config  gnome-keyring-glue.mdp  gnome-keyring-glue.mds
help/: Makefile.am
help/C/: Makefile.am  lat-C.omf  lat.xml  legal.xml
lat/: AboutDialog.cs  ActiveDirectoryComputerViewPlugin.cs  ActiveDirectoryContactsViewPlugin.cs  ActiveDirectoryGroupViewPlugin.cs  ActiveDirectoryUserViewPlugin.cs  AddAttributeDialog.cs  AddEntryDialog.cs  AddObjectClassDialog.cs  AssemblyInfo.cs.in  AttributeEditorWidget.cs  CertMgr.cs  CertificateDialog.cs  ConnectDialog.cs  Connection.cs  ConnectionManager.cs  ConnectionProfile.cs  ContactsView.cs  ContactsViewDialog.cs  CreateEntryDialog.cs  CustomView.cs  CustomViewDialog.cs  CustomViewManager.cs  Defines.cs.in  DynamicView.cs  DynamicViewDialog.cs  EditAdComputerViewDialog.cs  EditContactsViewDialog.cs  EditUserViewDialog.cs  GroupsView.cs  GroupsViewDialog.cs  HostsView.cs  HostsViewDialog.cs  LDIF.cs  LdapEntryAnalyzer.cs  LdapSearch.cs  LdapServer.cs  LdapTreeView.cs  Log.cs  Logger.cs  LoginDialog.cs  (+55 more)
lat/plugins/: Makefile.am  plugins.mds
lat/plugins/ActiveDirectoryCoreViews/: ActiveDirectoryComputerViewPlugin.cs  ActiveDirectoryContactsViewPlugin.cs  ActiveDirectoryCoreViews.mdp  ActiveDirectoryGroupViewPlugin.cs  ActiveDirectoryUserViewPlugin.cs  EditAdComputerViewDialog.cs  EditAdUserViewDialog.cs  EditContactsViewDialog.cs  GroupsViewDialog.cs  Makefile.am  NewAdComputerViewDialog.cs  NewAdGroupViewDialog.cs  NewAdUserViewDialog.cs  NewContactsViewDialog.cs  adUserViewDialog.cs  dialogs.glade
lat/plugins/JpegAttributeViewPlugin/: JpegAttributeViewPlugin.cs  JpegAttributeViewPlugin.mdp  Makefile.am
lat/plugins/JpegAttributeViewer/: JpegAttributeViewer.cs  JpegAttributeViewer.mdp  Makefile.am  dialog.glade
lat/plugins/PasswordAttributeViewer/: Makefile.am  PasswordAttributeViewer.cs  PasswordAttributeViewer.mdp
lat/plugins/PosixCoreViews/: EditContactsViewDialog.cs  EditUserViewDialog.cs  GroupsViewDialog.cs  HostsViewDialog.cs  Makefile.am  NewContactsViewDialog.cs  NewUserViewDialog.cs  PosixComputerViewPlugin.cs  PosixContactsViewPlugin.cs  PosixCoreViews.mdp  PosixGroupViewPlugin.cs  PosixUserViewPlugin.cs  UserDefaultValuesDialog.cs  dialogs.glade
libs/: Makefile.am
network-manager/: Device.cs  Makefile.am  Manager.cs  Network.cs  NetworkDetect.cs  network-manager.mdp
po/: ChangeLog  POTFILES.in  fr_FR.po  it_IT.po  pt_BR.po
resources/: Makefile.am  lat.glade
