EXTRA_DIST = \
	lat.glade \
	contact-new.png \
	text-x-generic.png \
	x-directory-remote-server.png \
	edit-find.png \
	unlocked16x16.png \
	x-directory-remote-workgroup.png \
	locked16x16.png \
	users.png \
	stock_person.png \
	x-directory-normal.png \
	mail-message-new.png \
	document-save.png \
	go-home.png
