EXTRA_DIST = \
	lat.glade \
	contact-new.png \
	contact-new-48x48.png \
	text-x-generic.png \
	x-directory-remote-server.png \
	edit-find.png \
	edit-find-48x48.png \
	unlocked16x16.png \
	x-directory-remote-workgroup.png \
	locked16x16.png \
	locked-48x48.png \
	users.png \
	stock_person.png \
	x-directory-normal.png \
	mail-message-new.png \
	document-save.png \
	go-home.png \
	x-directory-remote-server-48x48.png
